Include a reason in the job killed exception
In some cases we internally trigger a kill for a job. We've seen on some
clusters that this happened but it was difficult to figure out the exact
cause.

By adding a reason to the exception it will be easier to determine the
cause of a KILL operation.